--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .loading-circle {
+    width: 90px;
+    height: 90px;
+    border: 8px solid;
+    border-top: 8px solid;
+    animation: spin 2s linear infinite;
+    @apply rounded-full border-neutral-800 border-t-neutral-300;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+}
